--- a/coding-challenges/week07/day 3/package.json
+++ b/coding-challenges/week07/day 3/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
+    "body": "^5.1.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodemon": "^1.19.4"
