--- a/assignments/week09/day1/package.json
+++ b/assignments/week09/day1/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "express": "^4.17.1",
     "express-session": "^1.17.0"
