--- a/FPRT/frontend/package.json
+++ b/FPRT/frontend/package.json
@@ -7,7 +7,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^3.11.0",
-    "firebase": "^7.14.4",
+    "dom": "0.0.3",
+    "firebase": "^7.14.5",
     "lodash": "^4.17.15",
     "polished": "^3.6.3",
     "react": "^16.13.1",
@@ -16,6 +17,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "router": "^1.3.5",
     "styled-components": "^5.1.0"
   },
   "scripts": {
